--- a/manuscript-main.Rmd
+++ b/manuscript-main.Rmd
@@ -122,7 +122,7 @@ dist_align_mean <- round(mean(spp_list$sm_perc, na.rm = TRUE), 1)
 ```
 -----
 
-``` {r abstract, child = 'ms_0_abst_j_appl_ecol.Rmd'}
+``` {r abstract, child = 'ms_0_abst.Rmd'}
 ```
 
 <!--
