--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -12,20 +12,20 @@ Knowing where species exist and thrive is fundamental to the sciences of ecology
 
 One major outcome of this body of science is the various compiled databases of species distribution maps. Here we focus on global-scale repositories that predict marine species ranges throughout the world's oceans – AquaMaps [@kaschner_aquamaps:_2015] and International Union for Conservation of Nature (IUCN) [@iucn_iucn_2015].  These two spatial datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].
 
-___sentence about SAUP - how can we rephrase the "two global-scale repositories" sentence to exclude it? "broad taxonomic coverage"?  something about not focusing just on economically important species? (is that a valid assumption about SAUP)___
+___sentence about SAUP - how can we rephrase the "two global-scale repositories" sentence to exclude it? "broad taxonomic coverage"?  something about not focusing just on economically important species? (is that a valid assumption about SAUP) - consider other datasets as well: NatureServe, BOTW, etc___
 
 ___or: "Several global-scale repositories predict ... In this paper we focus on two datasets that cover a broad taxonomic range: ..."___
 
-__Neither IUCN nor AquaMaps claims a lock on the "truth", and the small overlap in mapped species means each provides value in taxonomic and geographic coverage.  Method-driven differences in commission and omission errors produce clear and significant disagreement in species range descriptions between AquaMaps and IUCN datasets.__
 
-Neither dataset claims to represent the "truth" of a species' spatial distribution, but rather each presents an understanding of the "truth" - one relying primarily on expert opinion and the other on model predictions, each method with its own challenges and advantages.  Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset; significant differences could indicate dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans [@rondinini_tradeoffs_2006; @jetz_ecological_2008].  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.
+Neither dataset claims to represent the "truth" of a species' spatial distribution, but rather each offers an understanding of the "truth" - one relying primarily on expert opinion and the other on model predictions.  Each method presents its own challenges and advantages, and the small overlap in mapped species means each dataset provides value in taxonomic and geographic coverage.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.
+
+Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: geographic range data such as IUCN range maps frequently introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008].  
 
 To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of the `r format(n_spp_all, big.mark = ',')` marine species mapped by one or both datasets.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).
 
-As understanding of a given species improves, we expect that range maps, regardless of method, would become more accurate in predicting both species presence and absence.  Close alignment between two independent range maps can therefore indicate higher confidence in species presence or absence than a single map.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align in both distribution and overall area; from the results we determine several issues that can introduce commission errors, and suggest methods to improve confidence in species range predictions. 
+As understanding of a given species improves, we expect that range maps, regardless of method, would become more accurate in predicting species presence and absence.  Close alignment between two independent range maps can therefore indicate higher confidence in species presence or absence than a single map.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align in both distribution and overall area; from the results we determine methodological issues that can introduce commission errors, and suggest methods to improve confidence in species range predictions. 
 
 We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015] and a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.  
 
-While we cannot recommmend one data set as more accurate than the other, we suggest methods to improve confidence in species range predictions to better inform conservation management and policy decisions.
+Each of these datasets provides unique value in taxonomic and geographic coverage; while we have identified some potential issues in each, we cannot simply recommmend one data set over the other.  Instead, we recommend simple methods to reduce incidence of commission errors in each dataset, improving confidence in species range predictions to better inform conservation management and policy decisions.
 
-___acknowledge or debunk other global data sets - e.g. SAUP?___
